Added UserController and Its Api modified login api
