# src/dtos/UserDto.ts
@@ -11,3 +11,13 @@ export default interface UserDto {
 }
 
 
+export interface UserBasicDto {
+  id: number;
+  guid: string;
+  firstName: string;
+  lastName: string;
+  email: string;
+  profilePicture?: File;
+  isActive: boolean;
+  isDeleted?: boolean;
+}
